<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnss_settings"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- GPS Monitoring -->
        <TextView
            android:id="@+id/label_gnss_sensitivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gnss_sensitivity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seek_gnss_sensitivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="25"
            android:progress="8"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gnss_sensitivity_desc"
            android:textSize="12sp"
            android:textColor="#888888"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/label_baseline_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseline_duration"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seek_baseline_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="50"
            android:progress="20"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnSaveGpsSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_settings" />

    </LinearLayout>
</ScrollView>
